ignoring logs, added write_to_excel()

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ venv/
 __pycache__/
 logs/*
 !/logs/.gitkeep
-!/logs/user_login.csv
-!/logs/login_history.xlsx
+#logs/user_login.csv
+#logs/login_history.xlsx
 dags/file_creation_dag.py
 dags/simple_dag.py
